# Templane

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SPEC.md  tsp-protocol-guide.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  release-templane-conform.yml  release-templane-go.yml  release-templane-java.yml  release-templane-python.yml  release-templane-ts.yml
brand/: README.md  preview.html
brand/source/: complete_brand_system.html
docs/: ADOPTION.md  ARCHITECTURE.md  BASELINE_CHECKLIST.md  DOCS_GAP_LEDGER.md  GETTING_STARTED.md
examples/: README.md
examples/01-basic-hello/: README.md  data-invalid.json  (+1 more)
templane-go/: LICENSE  README.md  go.mod
templane-java/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
templane-python/: README.md  pyproject.toml
templane-python/conform-adapter/: run.py
templane-python/examples/: README.md
templane-python/examples/01-hello/: greeting.templane  run.py
templane-python/examples/02-validation-errors/: profile.templane  run.py
templane-python/examples/03-nested-and-lists/: order.templane  run.py
templane-python/examples/04-jinja-binding/: email.templane  run.py
templane-python/examples/05-breaking-change/: run.py  v2.schema.yaml
templane-python/examples/06-sidecar/: password_reset.jinja  password_reset.schema.templane  run.py
templane-python/src/jinja_templane/: __init__.py  environment.py
templane-python/src/templane_adapter_html/: html_adapter.py
templane-python/src/templane_adapter_yaml/: yaml_adapter.py
templane-python/src/templane_core/: breaking_change.py  ir_generator.py  models.py  schema_parser.py  type_checker.py
templane-python/tests/: test_adapters.py  test_breaking_change.py  test_hash.py  test_ir_generator.py  test_jinja_templane.py  test_models.py  test_schema_parser.py  test_sidecar.py
templane-spec/: README.md  package-lock.json  templane-conform.yaml
templane-spec/templane-core/: pyproject.toml
templane-spec/templane-core/src/templane_core/: html_adapter.py  models.py  type_checker.py  yaml_adapter.py
templane-spec/templane-core/tests/: test_adapters.py  test_models.py  test_schema_parser.py  test_type_checker.py
templane-ts/: README.md  package-lock.json  package.json  tsconfig.json
tsp-go/: README.md  go.mod
tsp-java/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
tsp-python/: README.md  pyproject.toml
tsp-python/conform-adapter/: run.py
tsp-python/src/jinja_tsp/: environment.py
tsp-python/src/tsp_adapter_html/: html_adapter.py
tsp-python/src/tsp_adapter_yaml/: yaml_adapter.py
tsp-python/src/tsp_core/: breaking_change.py  hash.py  models.py  type_checker.py
tsp-python/tests/: test_adapters.py  test_breaking_change.py  test_hash.py  test_jinja_tsp.py  test_models.py  test_schema_parser.py  test_type_checker.py
tsp-spec/: README.md  tsp-conform.yaml
tsp-ts/: README.md  package-lock.json  package.json  tsconfig.json
(+302 files in other folders)
