[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "templane-python"
version = "0.1.0"
description = "Schema-validated Jinja2 templates — typed contracts that catch bad data before render."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Eresh Gorantla", email = "eresh.zealous@gmail.com" },
]
keywords = [
  "templates",
  "jinja2",
  "schema",
  "validation",
  "typed-templates",
  "templane",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = ["pyyaml>=6.0", "jinja2>=3.1"]

[project.urls]
Homepage = "https://github.com/ereshzealous/Templane"
Repository = "https://github.com/ereshzealous/Templane"
Issues = "https://github.com/ereshzealous/Templane/issues"
Documentation = "https://github.com/ereshzealous/Templane#readme"
Changelog = "https://github.com/ereshzealous/Templane/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = [
  "src/templane_core",
  "src/templane_adapter_html",
  "src/templane_adapter_yaml",
  "src/jinja_templane",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
