[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "templane-core"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/templane_core"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
